--- a/LearnSphere/LearnSphere/View/EditPerfilPage.xaml
+++ b/LearnSphere/LearnSphere/View/EditPerfilPage.xaml
@@ -12,11 +12,14 @@
             <Entry x:Name="entryEmail" />
             <Label Text="Telefone:" />
             <Entry x:Name="entryTelefone" />
+            <Label Text="Senha:" />
+            <Entry x:Name="entrySenha" IsPassword="True" />
             <StackLayout Orientation="Horizontal" Margin="0,20">
                 <Label Text="Se tornar Fornecedor?" VerticalOptions="Center" />
                 <Switch x:Name="switchTipoUsuario" HorizontalOptions="StartAndExpand" />
             </StackLayout>
             <Button Text="Salvar" Clicked="Salvar_Clicked" HorizontalOptions="Center" Margin="0,40,0,0" />
+            <Button Text="Desconectar" Clicked="Desconectar_Clicked" HorizontalOptions="Center" Margin="0,10,0,0" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
