--- a/LearnSphere/LearnSphere/App.xaml
+++ b/LearnSphere/LearnSphere/App.xaml
@@ -1,8 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
+﻿<Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:LearnSphere.Converters"
              x:Class="LearnSphere.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <local:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
