--- a/LearnSphere/LearnSphere/View/SearchPage.xaml
+++ b/LearnSphere/LearnSphere/View/SearchPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:LearnSphere.Converters"
              x:Class="LearnSphere.View.SearchPage" BackgroundColor="White">
     <StackLayout Padding="20" Spacing="20">
         <SearchBar x:Name="searchBar" 
@@ -14,7 +15,7 @@
                         <ViewCell>
                             <Frame CornerRadius="10" Margin="4" Padding="5" BackgroundColor="#FFFFFF">
                                 <StackLayout Orientation="Horizontal" Spacing="10">
-                                    <Image Source="{Binding Imagem}" Aspect="AspectFill" WidthRequest="100" HeightRequest="100"/>
+                                    <Image Source="{Binding foto, Converter={StaticResource ByteArrayToImageSourceConverter}}" Aspect="AspectFill" WidthRequest="100" HeightRequest="100"/>
                                     <StackLayout Orientation="Vertical" Spacing="5">
                                         <Label Text="{Binding titulo}" FontAttributes="Bold" FontSize="18" TextColor="#000000" />
                                         <Label Text="{Binding desc_secundaria}" LineBreakMode="TailTruncation" FontSize="14" TextColor="#666666" />
