--- a/LearnSphere/LearnSphere/View/PageHome.xaml
+++ b/LearnSphere/LearnSphere/View/PageHome.xaml
@@ -1,8 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LearnSphere.View.PageHome" BackgroundColor="White"
-              NavigationPage.HasNavigationBar="False">
+             x:Class="LearnSphere.View.PageHome"
+             BackgroundColor="White"
+             NavigationPage.HasNavigationBar="True">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem IconImageSource="vender.png"
+                     Text="Carrinho"
+                     Order="Primary"
+                     Priority="0"
+                     Clicked="OnCartClicked"/>
+    </ContentPage.ToolbarItems>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
